:bug: Hide potential y-axis overflow

--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -4,8 +4,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html {
+html,
+body {
 	min-height: 100%;
+	width: 100%;
+	overflow-x: hidden;
+}
+
+html {
 	scroll-behavior: smooth;
 }
 
@@ -13,7 +19,6 @@ body {
 	background: var(--bg);
  	color: var(--body-color);
   line-height: 1.5;
-	min-height: 100%;
 	height: 100%;
 
 	&:before {
